# loam_velodyne-1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  loam_continuous.rviz  loam_velo.rviz
MATLAB/: getEdgeDistance.m  getJPlane.m  getPlaneDistance.m  getPlaneDistance2.m  getPlaneJacobi.m  getR.m  loam.m  main.m  main_Plane.m  plane_derivative.m  readGT.m  readVelo.m  testPlane.m
src/: main_KITTI.cpp  main_ceres.cpp  main_loam.cpp  main_pcl_icp.cpp  main_testICP.cpp
src/loam/: icp.cpp  icp.h  laserMapping.cpp  laserMapping.h  laserOdometry.cpp  laserOdometry.h  loam_wrapper.cpp  loam_wrapper.h  openLOAM.h  scanRegistration.cpp  scanRegistration.h  transformMaintenance.cpp  transformMaintenance.h
src/util/: KITTI.cpp  KITTI.h  evaluate_odometry.cpp
